@@ -2,6 +2,9 @@ gnutls26 (2.8.1-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
 
+  [ Simon Josefsson ]
+  * Remove cruft in rules file.
+
  -- Andreas Metzler <ametzler@debian.org>  Thu, 11 Jun 2009 09:36:57 +0200
 
 gnutls26 (2.8.1-1) experimental; urgency=low
